--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yuriy Shtokarev",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios-https-proxy-fix": "^0.17.1",
+    "fs-extra": "^8.1.0",
+    "puppeteer": "^1.19.0",
+    "puppeteer-cluster": "^0.16.0"
+  }
 }
